# geojsoncontour

./: .coverage  .coveragerc  .gitignore  .travis.yml  GeoJSON.ipynb  LICENSE.md  README.md  Untitled.ipynb  out.geojson  pyproject.toml  requirements.txt  requirements_travis.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
examples/: GeoJSON.ipynb  NetCDF to GeoJSON.ipynb  example_base.py  example_contour.py  example_contourf.py  example_netcdf.py  out.geojson
geojsoncontour/: __init__.py  contour.py  helper.py
geojsoncontour/examples/: example1.py
geojsoncontour/tests/: benchmark_contourf.geojson  benchmark_multipolycontourf.geojson  benchmark_test1.geojson  test.py
geojsoncontour/utilities/: multipoly.py  netcdfhelper.py  vertices.py
tests/: benchmark_contourf.geojson  benchmark_multipolycontourf.geojson  benchmark_test1.geojson  benchmark_test_properties.geojson  test.py
