[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geojsoncontour"
version = "0.5.0"
authors = [
  { name = "Bart Römgens", email = "bart.romgens@gmail.com" },
]
license = { file = "LICENSE.md" }
description = "Convert matplotlib contour plots to geojson"
readme = "README.md"
keywords = ["contour", "plot", "geojson", "pyplot", "matplotlib", "gis", "map"]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "geojson",
  "numpy",
  "matplotlib>=3.8",
  "xarray",
]
[project.urls]
Repository = "http://github.com/bartromgens/geojsoncontour"

[tool.setuptools]
packages = ["geojsoncontour", "geojsoncontour.utilities"]
